tests/ui/pub/issue-33174-restricted-type-in-public-interface.stderr
error[E0446]: private type `Snail` in public interface
  --> $DIR/issue-33174-restricted-type-in-public-interface.rs:27:1
   |
LL | pub(crate) struct Snail;
   | ----------------------- `Snail` declared as private
...
LL | pub type Helix_pomatia = Shell<Snail>;
   | ^^^^^^^^^^^^^^^^^^^^^^ can't leak private type

warning: type `Snail` is more private than the item `Helix_pomatia`
   |
note: type alias `Helix_pomatia` is reachable at visibility `pub`
  --> $DIR/issue-33174-restricted-type-in-public-interface.rs:27:1
   |
LL | pub type Helix_pomatia = Shell<Snail>;
   | ^^^^^^^^^^^^^^^^^^^^^^
note: but type `Snail` is only usable at visibility `pub(crate)`
  --> $DIR/issue-33174-restricted-type-in-public-interface.rs:9:1
   |
LL | pub(crate) struct Snail;
   | ^^^^^^^^^^^^^^^^^^^^^^^
note: the lint level is defined here
  --> $DIR/issue-33174-restricted-type-in-public-interface.rs:2:9
   |
LL | #![warn(private_interfaces)]
   |         ^^^^^^^^^^^^^^^^^^

error[E0446]: crate-private type `Turtle` in public interface
  --> $DIR/issue-33174-restricted-type-in-public-interface.rs:31:1
   |
LL |     pub(super) struct Turtle;
   |     ------------------------ `Turtle` declared as crate-private
...
LL | pub type Dermochelys_coriacea = Shell<sea::Turtle>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't leak crate-private type

warning: type `Turtle` is more private than the item `Dermochelys_coriacea`
   |
note: type alias `Dermochelys_coriacea` is reachable at visibility `pub`
  --> $DIR/issue-33174-restricted-type-in-public-interface.rs:31:1
   |
LL | pub type Dermochelys_coriacea = Shell<sea::Turtle>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: but type `Turtle` is only usable at visibility `pub(crate)`
  --> $DIR/issue-33174-restricted-type-in-public-interface.rs:14:5
   |
LL |     pub(super) struct Turtle;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0446]: private type `Tortoise` in public interface
  --> $DIR/issue-33174-restricted-type-in-public-interface.rs:35:1
   |
LL | struct Tortoise;
   | --------------- `Tortoise` declared as private
...
LL | pub type Testudo_graeca = Shell<Tortoise>;
   | ^^^^^^^^^^^^^^^^^^^^^^^ can't leak private type

warning: type `Tortoise` is more private than the item `Testudo_graeca`
   |
note: type alias `Testudo_graeca` is reachable at visibility `pub`
  --> $DIR/issue-33174-restricted-type-in-public-interface.rs:35:1
   |
LL | pub type Testudo_graeca = Shell<Tortoise>;
   | ^^^^^^^^^^^^^^^^^^^^^^^
note: but type `Tortoise` is only usable at visibility `pub(crate)`
  --> $DIR/issue-33174-restricted-type-in-public-interface.rs:19:1
   |
LL | struct Tortoise;
   | ^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors; 3 warnings emitted

For more information about this error, try `rustc --explain E0446`.
